syntax = "proto3";

package ecs.v1;

option go_package = "ecs/pb/gen/ecs/v1;ecspb";

import "google/protobuf/empty.proto";

// Enums
enum DirectionEnum {
  UNKNOWN = 0;
  NORTH = 1;
  SOUTH = 2;
  EAST = 4;
  WEST = 8;
}

// Components
message NameComponent { string value = 1; }

message ChildOfComponent { uint32 parent = 1; }

message IsAComponent { uint32 prototype = 1; }

message PositionComponent {
  float x = 1;
  float y = 2;
  float z = 3;
}

message VelocityComponent {
  float x = 1;
  float y = 2;
  float z = 3;
}

message RotationComponent {
  float x = 1;
  float y = 2;
  float z = 3;
  float w = 4;
}

message DirectionComponent { DirectionEnum values = 1; }

message EatsComponent {
  repeated uint32 entities = 1;
  repeated uint32 amounts = 2;
}

message LikesComponent { repeated uint32 entity = 1; }

message GrowsComponent { repeated uint32 entity = 1; }

message GravityComponent { float g = 1; }

message FactionComponent { uint32 entity = 1; }

message DockedToComponent { uint32 entity = 1; }

message RuledByComponent { uint32 entity = 1; }

message AlliedWithComponent { repeated uint32 entity = 1; }

message WorldPatch {
  map<uint32, google.protobuf.Empty> entities = 1;
  map<uint32, NameComponent> name_components = 2;
  map<uint32, ChildOfComponent> child_of_components = 3;
  map<uint32, IsAComponent> is_a_components = 4;
  map<uint32, PositionComponent> position_components = 5;
  map<uint32, VelocityComponent> velocity_components = 6;
  map<uint32, RotationComponent> rotation_components = 7;
  map<uint32, DirectionComponent> direction_components = 8;
  map<uint32, EatsComponent> eats_components = 9;
  map<uint32, LikesComponent> likes_components = 10;
  map<uint32, google.protobuf.Empty> enemy_tags = 11;
  map<uint32, GrowsComponent> grows_components = 12;
  map<uint32, GravityComponent> gravity_components = 13;
  map<uint32, google.protobuf.Empty> spaceship_tags = 14;
  map<uint32, google.protobuf.Empty> spacestation_tags = 15;
  map<uint32, FactionComponent> faction_components = 16;
  map<uint32, DockedToComponent> docked_to_components = 17;
  map<uint32, google.protobuf.Empty> planet_tags = 18;
  map<uint32, RuledByComponent> ruled_by_components = 19;
  map<uint32, AlliedWithComponent> allied_with_components = 20;
}